--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
