--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.13",
+    "framer-motion": "^11.3.2",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.403.0",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.4",
+    "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.4.0",
