--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icon-cloud": "^4.1.4",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
+    "sharp": "^0.33.4",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
